--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.239",
+    "react-player": "^3.4.0",
     "react-scroll": "^1.9.0",
     "react-use": "^17.5.1",
     "sass": "^1.78.0",
